# coda

./: .appveyor.yml  .gitattributes  .gitignore  .hlint.yaml  .npmigmore  .travis.yml  .vscodeignore  Build.hs  CHANGELOG.md  Coda-Algebra-Ordered.html  Coda-Algebra-Zero.html  Coda-Algebra.html  Coda-Compiler.html  Coda-Console-Command.html  Coda-Console-Completion.html  Coda-Console-Options.html  Coda-Console-Pretty.html  Coda-Console-Unicode.html  Coda-Console.html  Coda-Data-Bwd.html  Coda-Data-Dyn.html  Coda-Data-List.html  Coda-Data-Queue.html  Coda-Data-Seq.html  Coda-Data-Sink.html  Coda-Data-View.html  Coda-FingerTree.html  Coda-Message-Base.html  Coda-Message-Builder.html  Coda-Message-Language.html  Coda-Message-Parser.html  Coda-Message-Severity.html  Coda-Message-Sink.html  Coda-Protocol-Base.html  Coda-Protocol-Builder.html  Coda-Protocol-Parser.html  Coda-Protocol-Sink.html  Coda-Relative-Absolute.html  Coda-Relative-At.html  Coda-Relative-Cat.html  (+185 more)
Coda/: Compiler.hs
algebra/: coda-algebra.cabal
algebra/common/: coda-algebra-common.cabal
algebra/group/: .hlint.yaml  coda-algebra-group.cabal
algebra/group/Coda/Relative/: Absolute.hs  Cat.hs
algebra/group/sigs/Coda/Relative/Delta/: Type.hsig
algebra/src/Coda/Relative/: Delta.hs
algebra/src/group/: Map.hs
app/: LLVM.hs  Main.hs
ci/: README.md  appveyor.ps1  gpg.conf  irc-notify.py
client/: .vscodeignore  package.json  tsconfig.json
coda/: CHANGELOG.md  LICENSE.md  coda.cabal
coda-algebra/: DeltaClass.hs  coda-algebra.cabal
coda-algebra/common/Coda/: FingerTree.hs  Rev.hs
coda-algebra/common/Coda/Algebra/: Ordered.hs
coda-algebra/common/Coda/Internal/Map/: Bits.hs
coda-algebra/common/Coda/Relative/Delta/: Type.hs
coda-algebra/common/Map/: BitQueue.hs  Bits.hs
coda-algebra/group/: Absolute.hs  Cat.hs  Delta.hsig  List.hs  Located.hs  Map.hs  Queue.hs  Relative.hs
coda-algebra/src/Coda/: FingerTree.hs  Rev.hs
coda-algebra/src/Coda/Relative/: Cat.hs  Map.hs
coda-algebra/src/Coda/Util/: BitQueue.hs
coda-algebra/src/common/Coda/Internal/Map/: BitQueue.hs
coda-algebra/test/: MapTest.hs
coda-algebra/test/code/: extension.test.ts
coda-algebra/test/src/: Build.hs
coda-console/: Main.hs  coda-console.cabal
coda-lsp/: coda-lsp.cabal
coda-lsp/test/: MessageTest.hs
coda-lsp/test/data/message/: response.golden
coda-lsp/test/src/: ListTest.hs  MapTest.hs  MessageTest.hs
coda-server/: .hlint.yaml  Main.hs  coda-server.cabal
coda-server/src/Coda/: Server.hs
coda-server/src/Coda/Server/: Options.hs
coda-syntax/: coda-syntax.cabal
coda-syntax/common/: Alex.hs  coda-syntax-common.cabal
coda-syntax/common/Coda/Syntax/: Prefix.hs
coda-syntax/dyck/: coda-syntax-dyck.cabal
coda-syntax/dyck-mixin/: coda-syntax-dyck-mixin.cabal
coda-syntax/dyck/Coda/Syntax/: Dyck.hs  Token.hsig
coda-syntax/lexer/: coda-syntax-lexer.cabal
coda-syntax/lexer/Coda/Syntax/: Lexer.x
coda-syntax/rope/: LICENSE.md  Rope.hs  coda-syntax-rope.cabal
coda-syntax/rope-mixin/: coda-syntax-rope-mixin.cabal
coda-syntax/rope/Coda/Syntax/: Document.hs  Dyck.hsig  Lexer.hsig  Rope.hs
coda-syntax/rope/sigs/Coda/Syntax/: Summary.hsig
coda-syntax/src/Coda/Syntax/: Dyck.hs  Keywords.hs  Lexer.x  Prefix.hs  Rich.hs
coda-syntax/src/common/: Change.hs  FromText.hs  Name.hs  Prefix.hs
coda-syntax/src/dyck-mixin/: Token.hsig
coda-syntax/src/lexer/: Lexer.x
coda-syntax/src/rope-mixin/: Document.hs  Lexer.hsig  Rope.hs  Summary.hsig
coda-syntax/src/token/: Token.hs
coda-syntax/src/token/Coda/Syntax/: Token.hs
coda-syntax/summary-unit/: Dyck.hsig  Summary.hs  coda-syntax-summary-unit.cabal
coda-syntax/summary-unit/Coda/Syntax/: Dyck.hsig  Summary.hs
coda-syntax/token/: coda-syntax-token.cabal
coda-syntax/token/Coda/Syntax/: Token.hs
coda-version/: coda-version.cabal
code/: extension.ts
console/: coda-console.cabal
etc/: stack.yaml
ext/: .npmignore  .vscodeignore  coda.configuration.json  extension.ts  package-lock.json  package.json  tsconfig.json
extension/: .npmignore  tslint.json
lean/: invertible.lean  mobiles.lean  nominal.lean  perm.lean  types.lean
lib/bdd/: bdd.cabal
lib/bdd/Data/: BDD.hs  Bimap.hs
lib/bdd/Data/List/: Skew.hs
lib/bdd/Ersatz/Solver/: BDD.hs
lib/bdd/examples/sudoku/: Main.hs
lib/bdd/examples/sudoku/Sudoku/: Cell.hs
lib/bdd/solver/Ersatz/Solver/: BDD.hs
lib/coda-automata/: coda-automata.cabal
lib/coda-automata/Coda/Automata/: DFA.hs  Internal.hs  NFA.hs  Presburger.hs
lib/coda-common/: coda-common.cabal
lib/coda-common/Coda/: FingerTree.hs  Version.hs
lib/coda-common/Coda/Relative/Delta/: Type.hs
lib/coda-common/Coda/Set/: Lazy.hs
lib/coda-common/Coda/Syntax/: FromText.hs  Prefix.hs  Sharing.hs
lib/coda-console/: coda-console.cabal
lib/coda-console/Coda/Console/: Pretty.hs
lib/coda-dyck/: Dyck.hs  coda-dyck.cabal
lib/coda-layout/: Layout.hs  coda-layout.cabal
lib/coda-lsp/: coda-lsp.cabal
lib/coda-lsp/Language/Server/: Protocol.hs
lib/coda-parser-combinators/: Combinators.hs  Parser.hsig  coda-parser-combinators.cabal
lib/coda-rope/: coda-rope.cabal
lib/coda-server/: coda-server.cabal
lib/coda-server/Coda/: Server.hs
lib/coda-server/Coda/Server/: Options.hs
lib/coda-set/: Elem-old.hs  Elem.hsig  coda-set.cabal
lib/coda-set/Set/: Internal.hs
lib/coda-summary-unit/: Dyck.hsig  coda-summary-unit.cabal
lib/coda-syntax/: coda-syntax.cabal
lsp/: coda-lsp.cabal
ref/: Algebra.hs  Change.hs  Foldable.hs  Measurement.hs  STM.hs  Sequence.hs  Sink.hs
server/: Setup.hs  coda-server.cabal  stack.yaml
server/Coda/: Server.hs
server/src/Coda/Console/: Command.hs  Options.hs
server/src/Coda/Message/: Builder.hs  Language.hs
server/src/Coda/Syntax/: View.hs
src/: Coda-Algebra-Ordered.html  Coda-Algebra-Zero.html  Coda-Algebra.html  Coda-Compiler.html  Coda-Console-Command.html  Coda-Console-Completion.html  Coda-Console-Options.html  Coda-Console-Pretty.html  Coda-Console-Unicode.html  Coda-Console.html  Coda-Data-Bwd.html  (+76 more)
version/: coda-version.cabal
version/Coda/: Version.hs
wip/: Perm.hs
(+318 files in other folders)
