name:          coda-algebra
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 2
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Relative containers
description:   Relative containers used by the coda compiler.

extra-source-files:
  .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

flag test-tasty
  default: True
  manual: True

flag test-once
  default: True
  manual: True

library coda-algebra-common
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: common

  exposed-modules:
    Coda.Algebra.Ordered
    Coda.Algebra.Zero
    Coda.FingerTree
    Coda.Internal.Map.Bits
    Coda.Internal.Map.BitQueue
    Coda.Relative.Delta.Type

  build-depends:
    base                 >= 4.10     && < 5,
    data-default         >= 0.7.1.1  && < 0.8,
    ghc-prim,
    hashable             >= 1.2.6    && < 1.3,
    lens                 >= 4.15     && < 5,
    text                 >= 1.2      && < 1.3

library coda-algebra-group
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: group group/sigs

  exposed-modules:
    Coda.Relative.Absolute
    Coda.Relative.Cat
    Coda.Relative.List
    Coda.Relative.Located
    Coda.Relative.Map
    Coda.Relative.Queue
    Coda.Relative.Class

  signatures:
    Coda.Relative.Delta.Type

  build-depends:
    base                 >= 4.10     && < 5,
    bifunctors           >= 5        && < 6,
    coda-algebra-common,
    comonad              >= 5        && < 6,
    data-default         >= 0.7.1.1  && < 0.8,
    ghc-prim,
    hashable             >= 1.2.6    && < 1.3,
    lens                 >= 4.15     && < 5,
    mtl                  >= 2.2.1    && < 2.3,
    profunctors          >= 5.2      && < 5.3,
    text                 >= 1.2      && < 1.3

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base,
    coda-algebra-common,
    coda-algebra-group,
    data-default,
    hashable,
    lens,
    text

  reexported-modules:
    Coda.Algebra.Ordered,
    Coda.Algebra.Zero,
    Coda.FingerTree,
    Coda.Relative.Absolute,
    Coda.Relative.Cat,
    Coda.Relative.Class,
    Coda.Relative.Delta.Type,
    Coda.Relative.List,
    Coda.Relative.Located,
    Coda.Relative.Map,
    Coda.Relative.Queue

  exposed-modules:
    Coda.Relative.Delta
    Coda.Rev

test-suite tasty
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: tasty.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    ListTest
    MapTest
  if !flag(test-tasty)
    buildable: False
  else
    build-tool-depends: tasty-discover:tasty-discover >= 3.0 && < 4.2
    build-depends:
      aeson,
      base,
      coda-algebra,
      containers,
      bifunctors,
      bytestring,
      filepath,
      lens,
      QuickCheck,
      tagged,
      tasty          >= 0.11 && < 0.12,
      tasty-quickcheck,
      tasty-discover >= 3.0  && < 4.2,
      tasty-golden   >= 2.3  && < 2.4,
      tasty-hunit    >= 0.9  && < 0.10,
      text

test-suite once
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: once.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(test-once)
    buildable: False
  else
    build-depends:
      aeson,
      base,
      coda-algebra,
      containers,
      bifunctors,
      bytestring,
      filepath,
      lens,
      tagged,
      text
