name:          coda-algebra
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 1.24
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Custom
synopsis:      Relative containers
description:   Relative containers used by the coda compiler.

extra-source-files:
  .hlint.yaml

custom-setup
  setup-depends:
    base                 >= 4       && < 5,
    Cabal,
    cabal-doctest        >= 1       && < 1.1

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

flag test-doctest
  default: True
  manual: True

flag test-hlint
  default: False
  manual: True

flag test-tasty
  default: True
  manual: True

flag test-once
  default: True
  manual: True

-- 'relative' monoids and pure algebraic structures
library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

  exposed-modules:
    Coda.Algebra.Zero
    Coda.FingerTree
    Coda.Relative.Absolute
    Coda.Relative.Cat
    Coda.Relative.Class
    Coda.Relative.Delta
    Coda.Relative.List
    Coda.Relative.Located
    Coda.Relative.Map
    Coda.Relative.Queue
    Coda.Relative.Rev

  other-modules:
    Coda.Util.BitQueue
    Coda.Util.Bits

  build-depends:
    base                 >= 4.10     && < 5,
    bifunctors           >= 5        && < 6,
    comonad              >= 5        && < 6,
    data-default         >= 0.7.1.1  && < 0.8,
    ghc-prim,
    hashable             >= 1.2.6    && < 1.3,
    lens                 >= 4.15     && < 5,
    mtl                  >= 2.2.1    && < 2.3,
    profunctors          >= 5.2      && < 5.3,
    text                 >= 1.2      && < 1.3

test-suite doctest
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: doctest.hs
  hs-source-dirs: test/src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(test-doctest)
    buildable: False
  else
    other-modules: Build Build_doctests
    autogen-modules: Build_doctests
    build-depends:
      base,
      bytestring,
      doctest    >= 0.11 && <0.14

test-suite hlint
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: hlint.hs
  hs-source-dirs: test/src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(test-hlint)
    buildable: False
  else
    other-modules: Build Build_doctests
    autogen-modules: Build_doctests
    build-depends:
      base,
      hlint >= 2.0.1

test-suite tasty
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: tasty.hs
  hs-source-dirs: test/src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    ListTest
    MapTest
  if !flag(test-tasty)
    buildable: False
  else
    tool-depends: tasty-discover:tasty-discover >= 3.0 && < 4.2
    build-depends:
      aeson,
      base,
      coda-algebra,
      containers,
      bifunctors,
      bytestring,
      filepath,
      lens,
      QuickCheck,
      tagged,
      tasty          >= 0.11 && < 0.12,
      tasty-quickcheck,
      tasty-discover >= 3.0  && < 4.2,
      tasty-golden   >= 2.3  && < 2.4,
      tasty-hunit    >= 0.9  && < 0.10,
      text


test-suite once
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: once.hs
  hs-source-dirs: test/src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(test-once)
    buildable: False
  else
    build-depends:
      aeson,
      base,
      coda-algebra,
      containers,
      bifunctors,
      bytestring,
      filepath,
      lens,
      tagged,
      text
