name:          coda-lsp
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 1.24
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Custom
synopsis:      Language Server Protocol
description:   This package provides an implementation of Microsoft's Language Server Protocol

data-files:
  test/data/message/*.golden

extra-source-files:
  .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

flag test-doctest
  default: True
  manual: True

flag test-hlint
  default: True
  manual: True

flag test-tasty
  default: True
  manual: True

custom-setup
  setup-depends:
    base                 >= 4       && < 5,
    Cabal,
    cabal-doctest        >= 1       && < 1.1

-- The language server protocol
library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Language.Server.Builder
    Language.Server.Protocol
    Language.Server.Parser
    Coda.Util.Aeson

  other-modules:
    Language.Server.TH

  build-depends:
    aeson                >= 1.1      && < 1.3,
    base                 >= 4.10     && < 5,
    bytestring           >= 0.10.8   && < 0.11,
    data-default         >= 0.7.1.1  && < 0.8,
    hashable             >= 1.2.6    && < 1.3,
    lens                 >= 4.15     && < 5,
    lens-aeson           >= 1.0.2    && < 1.1,
    template-haskell     >= 2.12     && < 2.13,
    text                 >= 1.2      && < 1.3,
    unordered-containers >= 0.2      && < 0.3,
    uri-encode           >= 1.5.0.5  && < 1.6

test-suite doctest
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: doctest.hs
  hs-source-dirs: test/src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(test-doctest)
    buildable: False
  else
    other-modules: Build Build_doctests
    autogen-modules: Build_doctests
    build-depends:
      base,
      bytestring,
      doctest    >= 0.11 && <0.14

test-suite hlint
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: hlint.hs
  hs-source-dirs: test/src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  if !flag(test-hlint)
    buildable: False
  else
    other-modules: Build Build_doctests
    autogen-modules: Build_doctests
    build-depends:
      base,
      hlint >= 2.0.1

test-suite tasty
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: tasty.hs
  hs-source-dirs: test/src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  other-modules: MessageTest
  if !flag(test-tasty)
    buildable: False
  else
    build-tools: tasty-discover
    other-modules: Paths_coda_lsp
    autogen-modules: Paths_coda_lsp
    build-depends:
      aeson,
      base,
      coda-lsp,
      containers,
      bifunctors,
      bytestring,
      filepath,
      lens,
      QuickCheck,
      tagged,
      tasty          >= 0.11 && < 0.12,
      tasty-quickcheck,
      tasty-discover >= 3.0  && < 4.2,
      tasty-golden   >= 2.3  && < 2.4,
      tasty-hunit    >= 0.9  && < 0.10,
      text
