name:          coda-syntax
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 2
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Syntax for the coda compiler
description:   Syntax for the coda compiler

extra-source-files: .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall

  mixins:
    coda-syntax-summary-unit (Summary as Coda.Syntax.Summary) requires (Dyck as Coda.Syntax.Dyck),
    coda-syntax-rope-mixin (Rope as Coda.Syntax.Rope, Document as Coda.Syntax.Document)
      requires (Lexer as Coda.Syntax.Lexer, Summary as Coda.Syntax.Summary, Dyck as Coda.Syntax.Dyck)

  reexported-modules:
    Alex as Coda.Syntax.Alex,
    Change as Coda.Syntax.Change,
    Coda.Syntax.Dyck,
    Coda.Syntax.Document,
    FromText as Coda.Syntax.FromText,
    Coda.Syntax.Lexer,
    Name as Coda.Syntax.Name,
    Prefix as Coda.Syntax.Prefix,
    Coda.Syntax.Rope,
    Coda.Syntax.Summary

--    Coda.Syntax.Token,

  build-depends:
    base,
    coda-syntax-common,
    coda-syntax-lexer,
    coda-syntax-rope-mixin,
    coda-syntax-summary-unit,
    coda-syntax-token
