name:          coda-syntax
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 2
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      Syntax for the coda compiler
description:   Syntax for the coda compiler

extra-source-files: .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

-- flat version to use until the backpacked version works
library
  default-language: Haskell2010
  hs-source-dirs: token dyck common lexer rope summary-unit
  ghc-options: -Wall

  exposed-modules:
    Coda.Syntax.Alex,
    Coda.Syntax.Change,
    Coda.Syntax.Dyck,
    Coda.Syntax.Document,
    Coda.Syntax.FromText,
    Coda.Syntax.Lexer,
    Coda.Syntax.Name,
    Coda.Syntax.Prefix,
    Coda.Syntax.Rope,
    Coda.Syntax.Summary,
    Coda.Syntax.Token

  build-depends:
    array,
    base,
    coda-algebra,
    coda-lsp,
    comonad,
    containers,
    data-default,
    hashable,
    lens,
    mtl,
    profunctors,
    text,
    unordered-containers
