name:          coda-version
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 1.10
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      The semantic version of the coda compiler
description:
  This package supplies the version number of the coda compiler in a semantic versioning compatible manner.
  .
  This code was shared across both console and server, so it is factored out here.

extra-source-files:
  .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules: Coda.Version
  other-modules: Paths_coda_version
  build-depends: base >= 4.10 && < 5
