name:          coda-server
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 1.10
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      The coda compiler
description:   This package provides Coda, a Visual Studio Code language experiment.

extra-source-files:
  .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Coda.Server
    Coda.Server.Options
  build-depends:
    aeson,
    base,
    bytestring,
    coda-algebra,
    coda-lsp,
    coda-syntax,
    data-default,
    lens,
    mtl,
    optparse-applicative >= 0.13     && < 0.15,
    text,
    unordered-containers
