name:          coda-version
category:      Language
version:       0.0.1
license:       BSD2
cabal-version: >= 1.10
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/coda/
bug-reports:   http://github.com/ekmett/coda/issues
copyright:     Copyright (C) 2017 Edward A. Kmett
build-type:    Simple
synopsis:      The coda compiler version
description:   This package provides version info about Coda

extra-source-files:
  .hlint.yaml

source-repository head
  type: git
  location: git://github.com/ekmett/coda.git

library
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules: Coda.Version
  other-modules: Paths_coda_version
  build-depends: base >= 4.10 && < 5
